updated build file to use mxmlc ant task
git-svn-id: https://code.doit.wisc.edu/svn/at-default/ls/CoolIt/trunk@14823 d64d4213-cb0a-0410-9606-839883b54457